--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,7 +15,7 @@ galaxy_info:
   # - CC-BY
   license: GPLv3
 
-  min_ansible_version: 2.4
+  min_ansible_version: 2.7
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -37,7 +37,7 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-      - trusty
+      - xenial
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
