add .travis tests

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,7 @@
+# vi: set ft=yaml ts=2:
 ---
+
 - hosts: localhost
-  remote_user: root
   roles:
-    - docker
+    - role: docker/daemon
+    - role: docker/ansible
