fix check_mode in tests

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -7,10 +7,12 @@
     - role: docker/ansible
   tasks:
     - name: get version of docker clientx
+      check_mode: false
       command: docker version -f {% raw %} "{{ .Client.Version }}" {% endraw %}
       register: _docker_version
 
     - name: get version of docker daemon
+      check_mode: false
       command: docker version -f {% raw %} "{{ .Server.Version }}" {% endraw %}
       register: _dockerd_version
 
