--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,8 @@
+# vim: set ft=yaml ts=2:
+---
+
 galaxy_info:
+  role_name: docker
   author: Markus Falb
   description: An ansible role for docker
 
@@ -26,7 +30,7 @@ galaxy_info:
   # this branch. If Travis integration is configured, only notifications for this
   # branch will be accepted. Otherwise, in all cases, the repo's default branch
   # (usually master) will be used.
-  #github_branch:
+  github_branch: dev
 
   #
   # Provide a list of supported platforms, and for each platform a list of versions.
@@ -39,13 +43,15 @@ galaxy_info:
     versions:
       - xenial
 
-  galaxy_tags: []
+  galaxy_tags:
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
     #
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
+    - docker
+
 
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
