--- a/meta/main.yml
+++ b/meta/main.yml
@@ -30,7 +30,7 @@ galaxy_info:
   # this branch. If Travis integration is configured, only notifications for this
   # branch will be accepted. Otherwise, in all cases, the repo's default branch
   # (usually master) will be used.
-  github_branch: dev
+  # github_branch: dev
 
   #
   # Provide a list of supported platforms, and for each platform a list of versions.
