implement docker_assume_already_installed

--- a/daemon/tasks/main.yml
+++ b/daemon/tasks/main.yml
@@ -2,11 +2,14 @@
 ---
 
 - name: docker-ce repo does exist
-  when: docker.package == "docker-ce"
+  when:
+    - docker.package == "docker-ce"
+    - not docker.assume_already_installed
   include_tasks:
     file: docker-ce.yml
 
 - name: docker daemon does exist
+  when: not docker.assume_already_installed
   package:
     name: "{{ docker.package }}"
     state: present
