--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,9 +2,10 @@
 ---
 
 - hosts: localhost
+  vars:
+    - docker_assume_already_installed: true
   roles:
     - role: mafalb.docker/daemon
-      docker_assume_already_installed: true
     - role: mafalb.docker/ansible
   tasks:
     - name: create image
