fix docker_assume_already_installed when clause

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -44,7 +44,7 @@
         - debug
     - assert:
         that:
-        - docker.assume_already_installed == 'true'
+        - docker.assume_already_installed
         - ansible_facts.packages['docker-ce'] is defined
       when:
       - ansible_env.TRAVIS
