--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ before_install:
   - pip list
   - sudo apt-add-repository --yes ppa:ansible/ansible-2.7
   - sudo apt-get update
-  - sudo apt-get install ansible && sudo mkdir -p /etc/ansible/roles
-  - sudo echo -e "[defaults]\nhash_behaviour = merge\n" | sudo tee /etc/ansible/ansible.cfg
-  - sudo echo -e "localhost ansible_connection=local\n" | sudo tee /etc/ansible/hosts
+  - sudo apt-get install ansible
   - export ANSIBLE_CI_BRANCH=$TRAVIS_BRANCH CI_BUILD_DIR=$TRAVIS_BUILD_DIR ANSIBLE_FORCE_COLOR=1 CI=travis
   - ansible localhost -m setup
+  - sudo git clone git@github.com:mafalb/ci --recurse-submodules /etc/ansible/roles/mafalb.ci
+  - ansible -b -D -t all,debug /etc/ansible/roles/mafalb.ci/before_install.yml
 install:
-  - sudo ln -s $TRAVIS_BUILD_DIR /etc/ansible/roles/mafalb.docker
+  - ansible -b -D -t all,debug /etc/ansible/roles/mafalb.ci/install.yml
 script:
   - ansible-playbook -t all,debug -bD tests/test.yml -C
   - ansible-playbook -t all,debug -bD tests/test.yml
