--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_install:
   - export ANSIBLE_CI_BRANCH=$TRAVIS_BRANCH CI_BUILD_DIR=$TRAVIS_BUILD_DIR ANSIBLE_FORCE_COLOR=1 CI=travis
   - ansible localhost -m setup
   - sudo git clone https://github.com/mafalb/ci --recurse-submodules /etc/ansible/roles/mafalb.ci
-  - ansible -b -D -t all,debug /etc/ansible/roles/mafalb.ci/before_install.yml
+  - ansible-playbook -b -D -t all,debug /etc/ansible/roles/mafalb.ci/before_install.yml
 install:
-  - ansible -b -D -t all,debug /etc/ansible/roles/mafalb.ci/install.yml
+  - ansible-playbook -b -D -t all,debug /etc/ansible/roles/mafalb.ci/install.yml
 script:
   - ansible-playbook -t all,debug -bD tests/test.yml -C
   - ansible-playbook -t all,debug -bD tests/test.yml
