--- a/tests/test.yml
+++ b/tests/test.yml
@@ -16,12 +16,12 @@
 
     - name: check README file
       include_role:
-        name: mafalb.ansible_ci/tests
+        name: mafalb.docker/tests
         tasks_from: readme
 
     - name: check that container runs are idempotent
       include_role:
-        name: mafalb.ansible_ci/tests
+        name: mafalb.docker/tests
         tasks_from: run_container
 
     - name: get version of docker clientx
