do not install python-docker from apt on ubuntu xenial

--- a/ansible/tasks/main.yml
+++ b/ansible/tasks/main.yml
@@ -2,6 +2,7 @@
 ---
 
 - name: python-docker does exist
+  when: docker.ansible.package
   package:
     name: "{{ docker.ansible.package }}"
     state: present
