--- a/vars/Ubuntu-16.yml
+++ b/vars/Ubuntu-16.yml
@@ -6,4 +6,4 @@ docker:
     # the python-docker package does not work, running containers is not idempotent on xenial
     # package: "{{ (ansible_python.version.major|int == 3)|ternary('python3-docker','python-docker') }}"
     package: false
-
+    test: gugu
