--- a/ansible/tasks/main.yml
+++ b/ansible/tasks/main.yml
@@ -12,4 +12,4 @@
   when: not docker.ansible.package
   pip:
     name: docker
-    state: present
+    state: "{{ docker.ansible.package|ternary('present','absent') }}"
