--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - sudo apt-get install ansible
   - export ANSIBLE_CI_BRANCH=$TRAVIS_BRANCH CI_BUILD_DIR=$TRAVIS_BUILD_DIR ANSIBLE_FORCE_COLOR=1 CI=travis
   - ansible localhost -m setup
-  - sudo git clone -b dev https://github.com/mafalb/ci --recurse-submodules /etc/ansible/roles/mafalb.ci
+  - sudo git clone https://github.com/mafalb/ci --recurse-submodules /etc/ansible/roles/mafalb.ci
   - ansible-playbook -b -D -t all,debug /etc/ansible/roles/mafalb.ci/before_install.yml
 install:
   - ansible-playbook -b -D -t all,debug /etc/ansible/roles/mafalb.ci/install.yml
@@ -19,5 +19,3 @@ script:
   - ansible-playbook -t all,debug -bD tests/test.yml
   - ansible-playbook -t all,debug -bD tests/test.yml | tee /tmp/idempotence.tee
   - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
-after_script:
-  - sudo docker ps -a
