--- a/tests/test.yml
+++ b/tests/test.yml
@@ -23,12 +23,24 @@
       include_role:
         name: mafalb.docker/tests
         tasks_from: run_container
-
+        :
     - name: get version of docker clientx
       check_mode: false
       changed_when: false
       command: docker version -f {% raw %} "{{ .Client.Version }}" {% endraw %}
       register: _docker_version
+
+    - name: create docker container
+      docker_container:
+        name: xenial
+        image: ubuntu:xenial
+        tty: true
+
+    - name: add xenial to inventory
+      changed_when: false
+      add_host:
+        name: xenial
+        ansible_connection: docker
 
     - name: get version of docker daemon
       check_mode: false
@@ -63,3 +75,14 @@
         - ansible_facts.packages['docker-ce'] is defined
       when:
       - ansible_env.TRAVIS
+
+- hosts: xenial
+  roles:
+    - role: mafalb.docker
+      docker_package: docker-ce
+  tasks:
+    - name: check docker-ce on ubuntu xenial
+      include_role:
+        name: mafalb.docker/tests
+        tasks_from: xenial-docker-ce
+
