--- a/tests/test.yml
+++ b/tests/test.yml
@@ -79,6 +79,7 @@
       - ansible_env.TRAVIS
 
 - hosts: xenial
+  gather_facts: false
   tasks:
     - name: install python3
       raw: apt-get install -y python3
