actually try to install docker on xenial container

--- a/tests/tasks/xenial-docker-ce.yml
+++ b/tests/tasks/xenial-docker-ce.yml
@@ -1,7 +1,7 @@
 # vim: set ft=yaml ts=2:
 ---
 
-- name: get version of docker clientx
+- name: get version of docker client
   check_mode: true
   package:
     name: docker-ce
