fix file name of docker-ce gpg key

--- a/daemon/tasks/docker-ce.yml
+++ b/daemon/tasks/docker-ce.yml
@@ -8,7 +8,7 @@
 
 - name: dockers gpg key does exist
   apt_key:
-    data: "{{ lookup('file', 'docker-ce.asc') }}"
+    data: "{{ lookup('file', 'docker-ce.gpg') }}"
     state: present
 
 - name: docker repo does exist
