become root for install.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - ansible-playbook -b -D -t all,debug roles/mafalb.ansible_ci/before_install.yml -i cihost, -c local
   - ls -lR
 install:
-  - ansible-playbook -D -t all,debug roles/mafalb.ansible_ci/install.yml
+  - ansible-playbook -b -D -t all,debug roles/mafalb.ansible_ci/install.yml
 script:
   - ansible-playbook -t all,debug -bD tests/test.yml
   - ansible-playbook -t all,debug -bD tests/test.yml | tee /tmp/idempotence.tee
