--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   - ansible-playbook -b -D -t all,debug roles/mafalb.ansible_ci/install.yml
 script:
   - ansible-playbook -t all,debug -bD tests/test.yml
-  - ansible-playbook -t all,debug -bD tests/test.yml | tee /tmp/idempotence.tee
+  - ansible-playbook -t all,debug -bD tests/idempotency.yml | tee /tmp/idempotence.tee
   - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
 after_script:
   - ls -lR
