--- a/tests/test.yml
+++ b/tests/test.yml
@@ -31,6 +31,7 @@
       src: ubuntu-16
 
 - hosts: xenial
+  python_interpreter: python3
   gather_facts: false
   pre_tasks:
     - name: apt-get update
@@ -41,6 +42,7 @@
       raw: apt-get install -y python3-apt apt-transport-https
 
 - hosts: xenial
+  python_interpreter: python3
   gather_facts: true
   roles:
     - role: mafalb.docker/daemon
