--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,17 @@ install:
   - ansible-playbook -b -D -t all,debug roles/mafalb.ansible_ci/install.yml
 script:
   - ansible-lint --force-color -v tests/test.yml
+  - ansible-lint --force-color -v tests/run_containers.yml
   - ansible-lint --force-color -v tests/ubuntu.yml
   - ansible-lint --force-color -v tests/idempotency.yml
   - ansible-playbook -t all,debug -D tests/test.yml
+
+  - ansible-playbook -t all,debug -D tests/run_containers.yml
+  - ansible-playbook -t all,debug -D tests/run_containers.yml | tee /tmp/idempotency.tee
+  - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
+
   - ansible-playbook -t all,debug -D tests/ubuntu.yml
+
   - ansible-playbook -t all,debug -D tests/idempotency.yml | tee /tmp/idempotence.tee
   - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
 after_script:
