--- a/tests/ubuntu.yml
+++ b/tests/ubuntu.yml
@@ -34,7 +34,7 @@
         - docker.assume_already_installed
         - ansible_facts.packages['docker-ce'] is defined
       when:
-      - ansible_env.TRAVIS
+      - ansible_env.CI=travis
 
     - name: get version of docker client
       check_mode: true
