--- a/tests/test.yml
+++ b/tests/test.yml
@@ -59,4 +59,4 @@
         - docker.assume_already_installed
         - ansible_facts.packages['docker-ce'] is defined
       when:
-      - ansible_env.TRAVIS
+      - ansible_env.CI == 'travis'
