rename groups to hostgroups in test

--- a/tests/idempotency.yml
+++ b/tests/idempotency.yml
@@ -11,5 +11,8 @@
         - /sys/fs/cgroup:/sys/fs/cgroup:ro
       image_name: centos_image1
       src: ubuntu-16
+      hostgroups:
+        - python3_hosts
+        - testnodes
 
 ...
