--- a/tests/test.yml
+++ b/tests/test.yml
@@ -29,7 +29,7 @@
         - /sys/fs/cgroup:/sys/fs/cgroup:ro
       image_name: centos_image1
       src: ubuntu-16
-      groups:
+      hostgroups:
         - testnodes
         - python3_hosts
 
