CI variable could be not defined. test.yml failed.

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -47,6 +47,7 @@
 
     - name: assertions
       when:
+        - ansible_env.CI is defined
         - ansible_env.CI == 'travis'
       assert:
         that:
