fix image name bug

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -27,7 +27,7 @@
       container_name: xenial
       volumes:
         - /sys/fs/cgroup:/sys/fs/cgroup:ro
-      image_name: centos_image1
+      image_name: xenial_image
       src: ubuntu-16
       hostgroups:
         - testnodes
