--- a/tests/idempotency.yml
+++ b/tests/idempotency.yml
@@ -9,7 +9,7 @@
       container_name: xenial
       volumes:
         - /sys/fs/cgroup:/sys/fs/cgroup:ro
-      image_name: centos_image1
+      image_name: xenial_image1
       src: ubuntu-16
       hostgroups:
         - python3_hosts
