--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   - ansible-playbook -t all,debug -D tests/run_containers.yml | tee /tmp/idempotency.tee
   - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
 
-  - ansible-playbook -t all,debug -D tests/ubuntu.yml
+  - ansible-playbook -t all,debug -D tests/recreate_containers.yml
 
   - ansible-playbook -t all,debug -D tests/idempotency.yml | tee /tmp/idempotence.tee
   - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
