--- a/tests/run_containers.yml
+++ b/tests/run_containers.yml
@@ -7,6 +7,17 @@
   roles:
     - role: mafalb.docker/tests
   tasks:
+    - debug: var=docker.tests.containers
+      tags:
+        - never
+        - debug
+
+    - debug: var=item
+      with_items: "{{ docker.tests.containers }}"
+      tags:
+        - never
+        - debug
+
     - include_role:
         name: mafalb.ansible_ci/node/docker
       with_items: "{{ docker.tests.containers }}"
